[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/HUD/textbox/dialog_textbox.gd" type="Script" id=1]
[ext_resource path="res://src/HUD/textbox/continues_icon.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/eurostyle.tres" type="Theme" id=3]
[ext_resource path="res://assets/texture/thin_textbox_border.png" type="Texture" id=4]
[ext_resource path="res://assets/texture/gray_square.png" type="Texture" id=5]

[node name="dialog_textbox" type="Label"]
margin_right = 304.0
margin_bottom = 40.0
rect_min_size = Vector2( 304, 40 )
theme = ExtResource( 3 )
custom_constants/line_spacing = 8
text = "TEXTO A
TEXTO B
TEXTO C"
max_lines_visible = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
use_parent_material = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0

[node name="NinePatchRect2" type="NinePatchRect" parent="MarginContainer"]
show_behind_parent = true
use_parent_material = true
margin_right = 320.0
margin_bottom = 56.0
texture = ExtResource( 4 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="continues_icon" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="icon" type="Label" parent="continues_icon"]
margin_left = 304.0
margin_top = 40.0
margin_right = 312.0
margin_bottom = 48.0
rect_rotation = 90.0
theme = ExtResource( 3 )
text = ">"

[node name="TextureRect" type="TextureRect" parent="continues_icon/icon"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
stretch_mode = 1

[node name="show_timer" type="Timer" parent="continues_icon/icon"]
wait_time = 0.5
one_shot = true

[node name="hide_timer" type="Timer" parent="continues_icon/icon"]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="panel_finished" from="." to="continues_icon" method="_on_textbox_panel_finished"]
[connection signal="panel_started" from="." to="continues_icon" method="_on_textbox_panel_started"]
[connection signal="timeout" from="continues_icon/icon/show_timer" to="continues_icon/icon" method="show"]
[connection signal="timeout" from="continues_icon/icon/show_timer" to="continues_icon/icon/hide_timer" method="start"]
[connection signal="timeout" from="continues_icon/icon/hide_timer" to="continues_icon/icon" method="hide"]
[connection signal="timeout" from="continues_icon/icon/hide_timer" to="continues_icon/icon/show_timer" method="start"]
